--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,4 +59,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 set -g status-position top 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf(
-run ~/.tmux/plugins/tpm/tpm
+run ~/.config/tmux/plugins/tpm/tpm
