Updated gopls configuration. Removed redundent catpuccin config. Updated alacritty toml

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,9 @@
 [font.normal]
 family = "JetBrainsMono Nerd Font"
 style = "Regular"
+# family = "YaHei Consolas Hybrid"
+# style = "Regular"
+
 
 [window]
 opacity = 0.9
